test/corpus/backquote.txt
================================================================================
backquote simple
================================================================================

`1
`abc
`1 2
`()
`(a b)
`'1

--------------------------------------------------------------------------------

(source
 (backquote (number))
 (backquote (symbol))
 (backquote (number)) (number)
 (backquote (list))
 (backquote (list (symbol) (symbol)))
 (backquote (quote (number)))
)

================================================================================
weird backquotes
================================================================================

`"abc"
`a\ b
`\ a

--------------------------------------------------------------------------------

(source
 (backquote (string))
 (backquote (symbol))
 (backquote (symbol))
)
