test/corpus/comment.txt
================================================================================
comment simple
================================================================================

; common
;;;;;;;;;;; lisp
123 ; 321
1;comment
\;
|;|

--------------------------------------------------------------------------------

(source
(comment)
(comment)
(number) (comment)
(number) (comment)
(symbol)
(symbol)
)

================================================================================
comment inside list
================================================================================

(hello ; beautiful
 world)

--------------------------------------------------------------------------------

(source
(list (symbol) (comment) (symbol))
)

================================================================================
block comment
================================================================================

#| inside here |#

(a #| b |# c)

#| spans
multiple
lines
|#

--------------------------------------------------------------------------------

(source
 (block_comment)
 (list (symbol) (block_comment) (symbol))
 (block_comment)
)

================================================================================
block comment - nested
================================================================================

#| 1
  #| 2 
    #| 3 |#
  2 |# 
  #| 2 |#
1 |#

--------------------------------------------------------------------------------

(source
 (block_comment 
  (block_comment 
   (block_comment)) 
  (block_comment))
 )
