test/corpus/dot.txt
================================================================================
dot
================================================================================

.
..
(.)
(a . b)

--------------------------------------------------------------------------------

(source
 (dot)
 (symbol)
 (list (dot))
 (list (symbol) (dot) (symbol))
)
