test/corpus/in-package.txt
================================================================================
in-package character
================================================================================

(in-package #\p)

--------------------------------------------------------------------------------

(source
  (in_package (character))
  )

================================================================================
in-package symbol
================================================================================

(in-package cl-user)

--------------------------------------------------------------------------------

(source
  (in_package (symbol))
  )

================================================================================
in-package keyword
================================================================================

(in-package :cl-user)

--------------------------------------------------------------------------------

(source
  (in_package (keyword))
  )

================================================================================
in-package string
================================================================================

(in-package "cl-user")

--------------------------------------------------------------------------------

(source
  (in_package (string))
  )
