test/corpus/lambda.txt
================================================================================
lambda - full
================================================================================

(lambda (x y)
  (declare (number x) (number y))
  (declare (number y))
  "add 2 numbers"
  (+ x y))

--------------------------------------------------------------------------------

(source
  (lambda (lambda_list (symbol) (symbol))
    (declare (list (symbol) (symbol)) (list (symbol) (symbol)))
    (declare (list (symbol) (symbol)))
    (documentation)
    (list (symbol) (symbol) (symbol)))
  )


================================================================================
lambda - single string in body
================================================================================

(lambda () "add 2 numbers")

--------------------------------------------------------------------------------

(source
  (lambda (lambda_list) (string))
  )

================================================================================
lambda - empty body
================================================================================

(lambda ())

--------------------------------------------------------------------------------

(source
  (lambda (lambda_list))
  )

================================================================================
lambda - body starts with non-string
================================================================================

(lambda () 1 2)

--------------------------------------------------------------------------------

(source
  (lambda (lambda_list) 
    (number)
    (number))
  )

================================================================================
lambda - documented with body
================================================================================

(lambda () 
  "does something"
  (something)
  'done)

--------------------------------------------------------------------------------

(source
  (lambda (lambda_list) 
    (documentation)
    (list (symbol))
    (quote (symbol)))
  )

================================================================================
lambda - apply to args
================================================================================

((lambda (x) x) 5)

--------------------------------------------------------------------------------

(source
  (list 
    (lambda (lambda_list (symbol)) (symbol))
    (number))
  )
