test/corpus/quote.txt
================================================================================
quote simple
================================================================================

'1
'abc
'1 2
'()
'(a b)
''1

--------------------------------------------------------------------------------

(source
 (quote (number))
 (quote (symbol))
 (quote (number)) (number)
 (quote (list))
 (quote (list (symbol) (symbol)))
 (quote (quote (number)))
)

================================================================================
weird quotes
================================================================================

'"abc"
'a\ b
'\ a

--------------------------------------------------------------------------------

(source
 (quote (string))
 (quote (symbol))
 (quote (symbol))
)
