test/corpus/with-slots.txt
================================================================================
with-slots - simple
================================================================================

(with-slots (x y) obj (+ x y))

--------------------------------------------------------------------------------

(source
  (with_slots (slot_entry var: (symbol)) (slot_entry var: (symbol))
              (symbol)
              (list (symbol) (symbol) (symbol)))
  )

================================================================================
with-slots - variable name
================================================================================

(with-slots ((ax x) y) obj (+ ax y))

--------------------------------------------------------------------------------

(source
  (with_slots (slot_entry var: (symbol) slot: (symbol)) (slot_entry var: (symbol))
              (symbol)
              (list (symbol) (symbol) (symbol)))
  )

================================================================================
with-slots - empty bindings
================================================================================

(with-slots () obj 1)

--------------------------------------------------------------------------------

(source
  (with_slots (symbol) (number))
  )
